k8s/external-ingress/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-ingress
  labels:
    prometheus: k8s
