k8s/external-ingress/resources/plex-cors-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: plex-cors
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
    accessControlAllowOriginList:
      - "https://app.plex.tv"
    accessControlMaxAge: 100
    addVaryHeader: true
