k8s/external-ingress/resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-tq-rs
spec:
  type: ExternalName
  externalName: "apoc.node.tq.rs"
  ports:
    - name: http
      protocol: TCP
      targetPort: 80
      port: 32400
