k8s/external-ingress/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: external-ingress-plex-cors@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - plex.tq.rs
      secretName: media-tq-rs
  rules:
    - host: plex.tq.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-tq-rs
                port:
                  name: http
